r2e-compile-tests/compile-fail/guard_ws_path_symbol_unknown.stderr
error[E0425]: cannot find value `missing` in module `path`
  --> compile-fail/guard_ws_path_symbol_unknown.rs:34:39
   |
34 |     #[guard(StreamGuard::viewer(path::missing))]
   |                                       ^^^^^^^ not found in `path`
